--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - checkout
-    - setup_remote_docker:
+    - setup_remote_docker
     - run:
         name: "docker login to repository"
         command: |
@@ -34,8 +34,7 @@ jobs:
 
     steps:
     - checkout
-    - setup_remote_docker:
-        docker_layer_caching: true
+    - setup_remote_docker
     - run:
         name: "docker login to repository"
         command: |
@@ -58,8 +57,7 @@ jobs:
 
     steps:
     - checkout
-    - setup_remote_docker:
-        docker_layer_caching: true
+    - setup_remote_docker
     - run:
         name: "docker login to repository"
         command: |
