--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     - image: docker:17.11.0-ce-git
 
     environment:
-      DOCKER_NAMESPACE: "anchorfree"
+      DOCKER_NAMESPACE: "us-docker.pkg.dev/aura-networking/docker-registry"
 
     steps:
     - checkout
@@ -15,13 +15,13 @@ jobs:
     - run:
         name: "docker login to repository"
         command: |
-          docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+          echo $GAR_SERVICE_TOKEN_RW | docker login -u _json_key --password-stdin us-docker.pkg.dev
     - run: 
         name: "building docker image"
         command: | 
           docker build --file Dockerfile -t "${DOCKER_NAMESPACE}/${CIRCLE_PROJECT_REPONAME#docker-}:${CIRCLE_BRANCH}" .
     - run:
-        name: "push docker image to dockerhub with tag=${CIRCLE_BRANCH}"
+        name: "push docker image to GAR with tag=${CIRCLE_BRANCH}"
         command: |
           docker push ${DOCKER_NAMESPACE}/${CIRCLE_PROJECT_REPONAME#docker-}:${CIRCLE_BRANCH}
 
@@ -30,7 +30,7 @@ jobs:
     - image: docker:17.11.0-ce-git
 
     environment:
-      DOCKER_NAMESPACE: "anchorfree"
+      DOCKER_NAMESPACE: "us-docker.pkg.dev/aura-networking/docker-registry"
 
     steps:
     - checkout
@@ -38,13 +38,13 @@ jobs:
     - run:
         name: "docker login to repository"
         command: |
-          docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+          echo $GAR_SERVICE_TOKEN_RW | docker login -u _json_key --password-stdin us-docker.pkg.dev
     - run:
         name: "building docker image"
         command: |
           docker build --file Dockerfile -t "${DOCKER_NAMESPACE}/${CIRCLE_PROJECT_REPONAME#docker-}:latest" .
     - run: 
-        name: "push docker image to dockerhub with tag=latest"
+        name: "push docker image to GAR with tag=latest"
         command: |
           docker push ${DOCKER_NAMESPACE}/${CIRCLE_PROJECT_REPONAME#docker-}:latest
 
@@ -53,7 +53,7 @@ jobs:
     - image: docker:17.11.0-ce-git
 
     environment:
-      DOCKER_NAMESPACE: "anchorfree"
+      DOCKER_NAMESPACE: "us-docker.pkg.dev/aura-networking/docker-registry"
 
     steps:
     - checkout
@@ -61,7 +61,7 @@ jobs:
     - run:
         name: "docker login to repository"
         command: |
-          docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+          echo $GAR_SERVICE_TOKEN_RW | docker login -u _json_key --password-stdin us-docker.pkg.dev
     - run:
         name: "building docker image"
         command: |
@@ -72,7 +72,7 @@ jobs:
           	exit 1
           fi
     - run: 
-        name: "push docker image to dockerhub with release version tag"
+        name: "push docker image to GAR with release version tag"
         command: |
           docker push ${DOCKER_NAMESPACE}/${CIRCLE_PROJECT_REPONAME#docker-}:${CIRCLE_TAG}
 
